<resources>
    <string name="app_name">Jenkins</string>
    <string name="setup">Jenkins setup</string>
    <string name="logo_desc">Jenkins logo</string>
    <string name="setup_desc">Please enter the details of your jenkins setup. You can include port in url field.</string>
    <string name="url_ex">Ex:- http://jenkins.example.com:8080</string>
    <string name="name">Name</string>
    <string name="instance_name">Instance Name</string>
    <string name="url">URL</string>
    <string name="proceed">Proceed</string>
    <string name="error_empty">Fields are empty</string>
    <string name="error_invalid_url">Invalid url</string>
    <string name="invalid_jenkins_instance">This is not a jenkins instance</string>
    <string name="jenkins_version_desc">An instance of Jenkins version %s found.</string>
    <string name="auth_desc">Please enter your jenkins credentials.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="start">Get started</string>
    <string name="skip_auth">Skip authentication</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="anonymous">Anonymous</string>
    <string name="hi">Hi, %s</string>
    <string name="welcome">welcome to %s instance</string>
    <string name="jobs">Jobs</string>
    <string name="views">Views</string>
    <string name="queue">Queue</string>
    <string name="nodes">Nodes</string>
    <string name="stats">Stats</string>
    <string name="create">Create</string>
    <string name="restart">Restart</string>
    <string name="logout">Logout</string>
    <string name="total_jobs">Total Jobs: %s</string>
    <string name="running_jobs">Running Jobs: %s</string>
    <string name="successful_jobs">Successful Jobs: %s</string>
    <string name="failed_jobs">Failed Jobs: %s</string>
    <string name="unstable_jobs">Unstable Jobs: %s</string>
    <string name="aborted_jobs">Aborted Jobs: %s</string>
    <string name="retry">Retry</string>
    <string name="go_back">Go Back</string>

</resources>