<?xml version="1.0" encoding="utf-8"?>
<layout>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.SetupActivity">

    <LinearLayout
        android:id="@+id/layout_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="48dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_marginTop="32dp"
            android:text="@string/username"/>

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:drawableTint="@color/secondaryColor"
            android:drawablePadding="8dp"
            android:inputType="text"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_marginTop="32dp"
            android:text="@string/password"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_vpn_key_black_24dp"
            android:drawableTint="@color/secondaryColor"
            android:drawablePadding="8dp"
            android:inputType="textPassword"
            />

            <TextView
                android:id="@+id/tv_auth_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_error"
                android:drawableTint="@color/secondaryColor"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:visibility="gone"
                android:layout_marginTop="32dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColor="@color/secondaryColor"
                />


        <CheckBox
            android:id="@+id/cb_skip_auth"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/skip_auth"
            />


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_start"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:layout_centerHorizontal="true"
        android:text="@string/start"
        android:layout_marginTop="48dp"
        android:textColor="@color/secondaryColor"
        android:layout_below="@+id/layout_form"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_back"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background_accent"
        android:layout_centerHorizontal="true"
        android:text="@string/go_back"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:textColor="@color/secondaryTextColor"
        android:layout_below="@+id/bt_start"/>

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/auth_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:layout_below="@id/bt_back"
        android:visibility="gone"
        app:indicatorName="BallPulseSyncIndicator"
        app:indicatorColor="@color/secondaryColor"
        />

</RelativeLayout>
</layout>