<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SetupActivity">

    <LinearLayout
        android:id="@+id/layout_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="48dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/setup_desc"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_marginTop="32dp"
            android:text="@string/name"/>

        <EditText
            android:id="@+id/et_name"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_marginTop="32dp"
            android:text="@string/url"/>

        <EditText
            android:id="@+id/et_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            />

        <LinearLayout
            android:id="@+id/view_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:visibility="gone"
            android:layout_marginTop="32dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">

            <ImageView
                android:layout_width="18sp"
                android:layout_height="18sp"
                android:src="@drawable/ic_error"
                android:tint="@color/secondaryColor"/>

            <TextView
                android:id="@+id/tv_error"
                android:layout_marginStart="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/secondaryColor"
                />

        </LinearLayout>


    </LinearLayout>

    <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_above="@id/bt_proceed"
        android:layout_marginBottom="2dp"
        app:spb_color="@color/secondaryColor"
        android:visibility="gone"
        app:spb_progressiveStart_activated="true"
        />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/bt_proceed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        android:text="@string/proceed"
        android:textColor="@color/secondaryColor"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>